--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=
 category=Data Processing
 url=https://github.com/sitronlabs/SitronLabs_Enedis_TIC_Arduino_Library
 architectures=*
+depends=
